# remote-bind-apk

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/app/remote_bind/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bridge.cpp  log.h  native-lib.cpp
app/src/main/java/app/remote_bind/: App.kt  AppUI.kt  Bridge.kt  Config.kt  MainActivity.kt  RmBindActivity.kt  RmBindService.kt
app/src/main/java/app/remote_bind/ui/: AppUI.kt  ConfigDialog.kt  ConfigItem.kt  ShowToast.kt
app/src/main/java/app/remote_bind/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/lib/: Logger.kt  LoggerImpl.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/app/remote_bind/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
